Fix bug where download icons were not showing in <PresetLutCard>

--- a/src/components/Dashboard/PresetLutView/PresetLutCard.css
+++ b/src/components/Dashboard/PresetLutView/PresetLutCard.css
@@ -12,13 +12,13 @@
     color: white;
     font-family: 'Helvetica Neue', sans-serif;
     cursor: pointer;
-    transition: all 0.2s ease-in-out
+    transition: all 0.2s ease-in-out;
 }
 
-.preset-lut-card:hover {
+/* .preset-lut-card:hover {
     scale: 1.05;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-}
+} */
 
 .preset-lut-card p {
     margin: 0;
@@ -35,6 +35,7 @@
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
+    box-sizing: content-box;
 }
 
 .preset-lut-card svg:hover {
